--- a/styles/main.css
+++ b/styles/main.css
@@ -391,6 +391,11 @@ body {
   color: #ffffff;
 }
 
+main {
+  z-index: 1;
+  background-color: #ffffff;
+}
+
 ul {
   list-style: none;
 }
@@ -437,10 +442,6 @@ a {
 }
 .section--no-margin {
   margin-bottom: 0;
-}
-
-.footer {
-  margin-top: auto;
 }
 
 form {
@@ -524,12 +525,19 @@ label > input {
   background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.55), rgb(51, 51, 51)), url("../img/lazer.jpg");
   background-position: center;
   background-repeat: repeat;
-  -webkit-transform: translate3d(0px, 0px, 0px);
-          transform: translate3d(0px, 0px, 0px);
 }
-
 .header__container {
   margin: 0 auto;
+}
+
+.header__background {
+  z-index: 0;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.55), rgb(51, 51, 51)), url("../img/lazer.jpg");
+  background-position: center;
+  background-repeat: repeat;
 }
 
 .burger-btn {
@@ -836,8 +844,12 @@ label > input {
     opacity: 0;
   }
 }
+.header__content--container {
+  position: relative;
+}
 
 .header__content {
+  z-index: 1;
   background-color: rgba(67, 79, 79, 0.537);
   padding: 0 20px;
   margin-bottom: 30px;
@@ -938,6 +950,7 @@ label > input {
 }
 
 .header__form {
+  z-index: 1;
   margin: 0 auto;
   align-items: center;
 }
@@ -1147,18 +1160,18 @@ picture {
   margin-bottom: 20px;
 }
 
+.section--center-text {
+  text-align: center;
+}
+
 .section--featured {
-  padding-bottom: 60px;
   line-height: 1.8;
   color: #404044;
 }
 
-.section--featured-text {
-  text-align: center;
-}
-
 .featured {
   margin-top: 80px;
+  margin-bottom: 30px;
 }
 
 .featured__card {
@@ -1205,6 +1218,141 @@ picture {
   font-size: 15px;
 }
 
+.partners__slider {
+  position: relative;
+  height: 150px;
+  width: 90%;
+  margin: 0 auto;
+}
+.partners__slider .swiper-button-next::after,
+.partners__slider .swiper-button-prev::after {
+  display: none;
+}
+.partners__slider .swiper-button-next,
+.partners__slider .swiper-button-prev {
+  background-color: rgba(51, 51, 51, 0.65);
+  transition: all 0.35s ease-in-out;
+  -webkit-transform: translateX(0px);
+          transform: translateX(0px);
+  opacity: 0.5;
+}
+.partners__slider .swiper-button-next img,
+.partners__slider .swiper-button-prev img {
+  width: 20px;
+  height: 20px;
+}
+.partners__slider .swiper-button-next {
+  right: -27px;
+}
+.partners__slider .swiper-button-next:hover {
+  opacity: 1;
+  -webkit-transform: translateX(5px);
+          transform: translateX(5px);
+}
+.partners__slider .swiper-button-prev {
+  left: -27px;
+}
+.partners__slider .swiper-button-prev:hover {
+  opacity: 1;
+  -webkit-transform: translateX(-5px);
+          transform: translateX(-5px);
+}
+
+.swiper-button-next {
+  top: 30px;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-slide img {
+  width: 100%;
+  height: auto;
+}
+
+.swiper-wrapper {
+  text-align: center;
+  align-items: center;
+}
+
+.partners {
+  position: relative;
+  color: #404044;
+  padding-top: 10px;
+  padding-bottom: 120px;
+  margin-bottom: 0;
+}
+
+.partners__background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  background-image: url("../img/bg-document.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.2;
+}
+
+.map {
+  max-width: 2060px;
+  margin: 0 auto;
+}
+
+iframe {
+  width: 100%;
+  height: 350px;
+}
+
+.footer {
+  position: relative;
+  z-index: 1;
+  margin-top: auto;
+  background-color: #363839;
+}
+
+.footer__container {
+  padding: 20px;
+  margin-top: -100px;
+}
+
+.footer__inner {
+  padding: 20px;
+  background-color: #d1a954;
+}
+
+.footer__title {
+  text-align: center;
+  color: #363839;
+}
+
+.footer__form {
+  width: 100%;
+  overflow: hidden;
+}
+.footer__form input {
+  display: block;
+  height: 30px;
+  margin-top: 10px;
+  padding: 0 15px;
+  box-sizing: border-box;
+}
+
+.footer__button {
+  width: 100%;
+  margin-top: 20px;
+  background-color: #363839;
+}
+
 @media (min-width: 560px) {
   body {
     font-size: 16px;
@@ -1220,9 +1368,6 @@ picture {
   }
   .button {
     padding: 30px 50px;
-  }
-  .header {
-    height: 800px;
   }
   .burger-btn {
     width: 40px;
@@ -1298,6 +1443,19 @@ picture {
     margin: 0 auto;
     vertical-align: middle;
   }
+  .map {
+    margin-top: 50px;
+  }
+  .footer__container {
+    margin-top: -80px;
+  }
+  .footer__form input {
+    width: 45%;
+    height: 40px;
+  }
+  .footer__form {
+    display: block;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1316,9 +1474,6 @@ picture {
   .button {
     margin: 0;
     margin-top: 20px;
-  }
-  .header {
-    height: 700px;
   }
   .burger-btn-active {
     -webkit-transform: translateX(220px);
@@ -1413,7 +1568,7 @@ picture {
     outline: 5px solid rgba(51, 51, 51, 0.65);
   }
   .services__card {
-    outline: 5px solid rgb(234, 233, 233);
+    outline: 5px solid #F6F6F6;
   }
   .services__hover-text {
     bottom: 85px;
@@ -1437,9 +1592,6 @@ picture {
   }
   .section {
     margin-bottom: 0;
-  }
-  .header {
-    height: 800px;
   }
   .header__container {
     padding-left: 140px;
@@ -1621,9 +1773,6 @@ picture {
   }
   .section {
     margin-bottom: 0;
-  }
-  .header {
-    height: 900px;
   }
   .header__container {
     padding-left: 165px;
