--- a/styles/main.css
+++ b/styles/main.css
@@ -1333,34 +1333,33 @@ iframe {
 
 .footer__title {
   text-align: center;
+  line-height: 1.5;
   color: #363839;
   margin-top: 0;
 }
 
 .footer__form {
+  position: relative;
   width: 100%;
   overflow: hidden;
 }
 .footer__form input {
   height: 40px;
-  outline: 0px;
-  border: 0;
+  border: 0px;
   border-radius: 5px;
+  margin: 1px;
   margin-bottom: 20px;
+  padding: 0 10px;
+  font-size: 16px;
 }
 .footer__form input::-webkit-input-placeholder {
   font-size: 16px;
-  padding: 0 10px;
 }
 .footer__form input::placeholder {
   font-size: 16px;
-  padding: 0 10px;
 }
-
-.footer__button {
-  width: 100%;
-  margin-top: 10px;
-  background-color: #363839;
+.footer__form input:focus {
+  outline: 1px solid #363839;
 }
 
 .footer__button {
@@ -1463,10 +1462,15 @@ iframe {
   }
   .footer__form input {
     height: 40px;
-    width: 49%;
+    width: 43%;
   }
   .footer__form {
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 500px;
+    margin: 0 auto;
   }
 }
 
@@ -1589,6 +1593,29 @@ iframe {
     display: flex;
     justify-content: space-between;
   }
+  .footer__container {
+    margin-top: -40px;
+  }
+  .footer__inner {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  .footer__form input {
+    width: 200px;
+  }
+  .footer__form {
+    justify-content: space-between;
+    flex-direction: column;
+    width: 100%;
+  }
+  .footer__button {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 104px;
+    width: 230px;
+    margin-top: 0;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1611,8 +1638,7 @@ iframe {
     display: none;
   }
   .nav {
-    top: 0;
-    display: flex;
+    height: 100%;
     flex-direction: row;
     -webkit-transform: translateX(0);
             transform: translateX(0);
@@ -1654,7 +1680,7 @@ iframe {
     left: 0;
     width: auto;
     height: 100%;
-    padding: 35px 40px 0 40px;
+    padding: 0 40px 0 40px;
     margin: 0;
     align-items: center;
     flex-direction: row-reverse;
@@ -1764,6 +1790,30 @@ iframe {
   .services__hover--circle:hover::before {
     right: -30px;
   }
+  .footer__inner {
+    max-width: 100%;
+  }
+  .footer__title {
+    margin-bottom: 40px;
+  }
+  .footer__form input {
+    width: 230px;
+    height: 60px;
+    padding: 0 20px;
+    margin-right: 15px;
+  }
+  .footer__form {
+    max-width: 100%;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .footer__button {
+    position: relative;
+    height: 60px;
+    width: 220px;
+    margin-top: 0;
+    padding: 0;
+  }
 }
 
 @media (min-width: 768px) and (min-width: 1024px) {
@@ -1807,5 +1857,11 @@ iframe {
   }
   .services__card {
     max-height: 370px;
+  }
+  .footer__inner {
+    max-width: 80%;
+  }
+  .footer__button {
+    font-size: 18px;
   }
 }
