--- a/styles/main.css
+++ b/styles/main.css
@@ -1375,6 +1375,7 @@ iframe {
 }
 
 .info__block {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -1406,16 +1407,20 @@ iframe {
 }
 
 .info__link--address {
+  z-index: 100;
   position: relative;
+  display: inline-block;
 }
 .info__link--address::before {
   content: "";
   position: absolute;
+  z-index: 40;
   top: 0;
   left: 0;
   width: 80px;
   height: 80px;
-  background-image: url("../img/address.svg");
+  color: #d1a954;
+  background-image: url('<svg fill="#ffffff" width="800px" height="800px" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path d="M49,18.92A23.74,23.74,0,0,0,25.27,42.77c0,16.48,17,31.59,22.23,35.59a2.45,2.45,0,0,0,3.12,0c5.24-4.12,22.1-19.11,22.1-35.59A23.74,23.74,0,0,0,49,18.92Zm0,33.71a10,10,0,1,1,10-10A10,10,0,0,1,49,52.63Z"/></svg>');
 }
 @media (min-width: 560px) {
   body {
