--- a/styles/main.css
+++ b/styles/main.css
@@ -1321,6 +1321,7 @@ picture {
   margin: 0 auto;
   margin-top: 30px;
 }
+
 iframe {
   width: 100%;
   height: 350px;
@@ -1696,7 +1697,11 @@ iframe {
     margin-top: 0;
   }
   .info__block {
-    width: 25%;
+    width: 27%;
+  }
+  .info__menu,
+  .info__schedule {
+    width: 20%;
   }
 }
 
@@ -1940,10 +1945,16 @@ iframe {
   .services__card {
     max-height: 370px;
   }
+  iframe {
+    height: 500px;
+  }
   .footer__inner {
     max-width: 80%;
   }
   .footer__button {
     font-size: 18px;
+  }
+  .info__block {
+    width: 24%;
   }
 }
