--- a/styles/main.css
+++ b/styles/main.css
@@ -533,7 +533,7 @@ label > input {
 
 .header {
   position: relative;
-  height: 100vh;
+  height: 880px;
   background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.55), rgb(51, 51, 51)), url("../img/lazer.jpg");
   background-position: center;
   background-repeat: repeat;
@@ -621,7 +621,7 @@ label > input {
   z-index: 3;
   position: absolute;
   top: 0;
-  height: 100vh;
+  height: 880px;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
@@ -636,7 +636,7 @@ label > input {
   -webkit-transform: translateX(-30px);
           transform: translateX(-30px);
   background-color: #333333;
-  height: 100vh;
+  height: 880px;
 }
 
 .nav__close {
@@ -881,6 +881,7 @@ label > input {
   letter-spacing: 0.05em;
   line-height: 130%;
   font-size: 24px;
+  font-weight: 500;
 }
 .header__content-title::after {
   content: "";
@@ -987,6 +988,7 @@ label > input {
   margin-top: 0;
   font-size: 24px;
   text-align: center;
+  font-weight: 500;
 }
 .preview {
   color: #404044;
@@ -1038,7 +1040,7 @@ label > input {
   position: absolute;
   bottom: 0;
   margin: 20px 30px;
-  padding: 10px 20px;
+  padding: 10px 18px;
   text-align: center;
 }
 .services__name::after {
@@ -1461,6 +1463,9 @@ iframe {
   .button {
     padding: 30px 50px;
   }
+  .header {
+    height: 800px;
+  }
   .burger-btn {
     width: 40px;
     height: 20px;
@@ -1491,9 +1496,11 @@ iframe {
     margin-left: 17px;
   }
   .nav {
+    height: 800px;
     width: 300px;
   }
   .nav__active {
+    height: 800px;
     -webkit-transform: translateX(-40px);
             transform: translateX(-40px);
   }
@@ -1571,17 +1578,22 @@ iframe {
     margin: 0;
     margin-top: 20px;
   }
+  .header {
+    height: 700px;
+  }
   .burger-btn-active {
     -webkit-transform: translateX(220px);
             transform: translateX(220px);
   }
   .nav {
+    height: 700px;
     width: 320px;
     justify-content: flex-start;
     -webkit-transform: translateX(-400px);
             transform: translateX(-400px);
   }
   .nav__active {
+    height: 700px;
     -webkit-transform: translateX(-30px);
             transform: translateX(-30px);
   }
@@ -1646,7 +1658,7 @@ iframe {
     margin: 0;
   }
   .header__form {
-    width: 40%;
+    width: 45%;
   }
   .header__form-title {
     font-size: 30px;
@@ -1717,6 +1729,9 @@ iframe {
   }
   .section {
     margin-bottom: 0;
+  }
+  .header {
+    height: 800px;
   }
   .header__container {
     padding-left: 140px;
