--- a/styles/main.css
+++ b/styles/main.css
@@ -635,8 +635,8 @@ label > input {
   flex-direction: column;
   align-items: center;
   transition: ease 1.5s;
-  -webkit-transform: translateX(-300px);
-          transform: translateX(-300px);
+  -webkit-transform: translateX(-350px);
+          transform: translateX(-350px);
 }
 
 .nav__active {
@@ -792,6 +792,10 @@ label > input {
 }
 
 .nav__list--desktop {
+  display: none;
+}
+
+.none {
   display: none;
 }
 
@@ -1393,7 +1397,7 @@ iframe {
 .calculation {
   position: relative;
   color: #ffffff;
-  background-color: #363839;
+  background-color: #ffffff;
 }
 
 .calculation__inner {
@@ -1439,8 +1443,50 @@ iframe {
   outline: none;
 }
 
+.calculation__form {
+  padding: 40px 20px;
+  background-color: rgba(58, 58, 58, 0.26);
+  border-radius: 10px;
+}
+
 .calculation__label {
   margin-top: 20px;
+}
+
+.calculation__input-file {
+  padding: 0;
+  margin-top: 10px;
+}
+
+input[type=file]::-webkit-file-upload-button {
+  margin-right: 20px;
+  border: none;
+  background: #363839;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+}
+
+input[type=file]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background: #363839;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+input[type=file]::-webkit-file-upload-button:hover {
+  opacity: 0.7;
+}
+
+input[type=file]::file-selector-button:hover {
+  opacity: 0.7;
 }
 
 @media (min-width: 560px) {
@@ -1723,6 +1769,7 @@ iframe {
   }
   .nav__list:nth-child(1) {
     padding-top: 0;
+    margin-top: 200px;
   }
   .nav__list li {
     justify-content: space-between;
@@ -1742,29 +1789,15 @@ iframe {
     top: 0;
     left: 0;
     width: auto;
-    height: 100%;
     padding: 0 40px 0 40px;
     margin: 0;
     align-items: center;
     flex-direction: row-reverse;
     justify-content: end;
     background: rgba(51, 51, 51, 0.65);
-    -webkit-writing-mode: vertical-lr;
-            writing-mode: vertical-lr;
   }
   .nav__list-social li {
     margin-bottom: 50px;
-  }
-  .nav__list-social li:first-child, .nav__list-social li:nth-child(2) {
-    display: none;
-  }
-  .nav__list-social li:nth-child(5) {
-    display: block;
-    margin-bottom: 35px;
-  }
-  .nav__list-social li:nth-child(6) {
-    display: block;
-    margin-bottom: 200px;
   }
   .nav__item---info li {
     margin-bottom: 150px;
