--- a/styles/main.css
+++ b/styles/main.css
@@ -1484,6 +1484,37 @@ input[type=file]::file-selector-button:hover {
   opacity: 0.7;
 }
 
+.nav__social--desktop-wrap {
+  z-index: 2;
+  position: relative;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #292b2c;
+}
+
+.nav__social--desktop {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0;
+  padding-top: 100px;
+}
+
+.nav__social-list--desktop svg {
+  top: 4px;
+}
+
+.nav__social-list--svg {
+  display: flex;
+}
+.nav__social-list--svg .nav__social-item {
+  width: 40px;
+  height: 40px;
+}
+
+.nav__social-item {
+  margin: 10px;
+}
+
 @media (min-width: 560px) {
   body {
     font-size: 16px;
